# Embedded-Rust-from-Basics

./: README.md  correct.md  faq.md  hardware_requirements.md  references.md  toc.md
debug/: README.md
examples/: README.md
examples/eg-playground/: Cargo.toml
examples/eg-playground/examples/: draw_wio_splash.rs  hello_world.rs  image_raw.rs  line.rs  primitives.rs
examples/eg-playground/src/: main.rs
examples/wio_examples/: Cargo.toml  rustfmt.toml
examples/wio_examples/.cargo/: config
examples/wio_examples/examples/: 6-2-led_and_button.rs  6-2-led_and_button_driver.rs  6-3-echo.rs  6-3-panic_handler_global.rs  6-3-panic_handler_safe.rs  6-3-uart.rs  6-4-timer_busy_wait.rs  6-4-timer_interrupt.rs  6-5-buzzer_pwm.rs  6-5-buzzer_simple.rs  6-6-light_sensor.rs  6-7-accelerometer_serial.rs  6-7-i2c_read_device_id.rs  7-3-spi_read_display_power_mode.rs  7-4-hello_lcd.rs  7-4-splash.rs  8-1-stop_watch.rs  8-2-mic_fft.rs
examples/wio_examples/src/: lib.rs  main.rs
examples/wio_splash/: Cargo.toml
examples/wio_splash/src/: lib.rs
