[package]
name = "eg-playground"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.2"
embedded-graphics-simulator = "0.2.1"
wio_splash = {"path" = "../wio_splash"}
